--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     parents, the record producer <strong><em>Teruzane Utada</em></strong> and the enka singer Keiko Fuji
   </p>
     <a href="https://www.youtube.com/watch?v=o1sUaVJUeB0&pp=ygUKZmlyc3QgbG92ZQ%3D%3D" target="_blank" rel="noreferrer noopener">Hikaru Utada "first Love"</a>
-    <img src="images/dog.jpg" alt="Japanese artist Hikaru Utada standing against a wall in a brown colored hoodie" height="376" width="564">
+    <img src="images/hikaruutada.jpg" alt="Japanese artist Hikaru Utada standing against a wall in a brown colored hoodie" height="376" width="564">
 
   <h1><strong>Ordered and unordered lists</strong></h1>
   <p>
